# propositional-tableau-solver-rs

./: Cargo.toml  README.md
src/: lexer.rs  lib.rs  logger.rs  main.rs  propositional_formula.rs  tableau.rs
src/formula/: formula.rs  mod.rs  operators.rs  propositional_formula.rs  variable.rs
src/parser/: mod.rs  operators.rs  propositional_formula.rs  variable.rs
src/tableaux_solver/: mod.rs  tableau.rs  theory.rs
